--- a/style.css
+++ b/style.css
@@ -23,15 +23,22 @@ nav {
     margin: 0 50px 0 0;
 }
 
-.screen_mode {
+#screen_mode {
     cursor: pointer;
     background-color: black;
     border: none;
 }
 
+.nite_day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #day_mode {
     width: 3em;
     height: 3em;
+    position: absolute;
 }
 
 
@@ -122,4 +129,22 @@ a {
     color: white;
     text-decoration: none;
     font-weight: bold;
+}
+
+/* DAY MODE */
+
+body.day_mode {
+    background-color: white;
+    color: black;
+}
+
+#screen_mode {
+    background-color: white;
+    border: none;
+}
+
+#nite_mode {
+    width: 3em;
+    height: 3em;
+    /* position: absolute; */
 }
